deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: slink
  labels:
    app: slink
    version: v0.6
